--- a/slides/d3.html
+++ b/slides/d3.html
@@ -1,3 +1,3 @@
 <h2>D3</h2>
 
-<iframe width='100%' height='520' frameborder='0' allowtransparency="true" src="/static/d3-map.html"></iframe>
+<iframe width='100%' height='520' frameborder='0' allowtransparency="true" src="static/d3-map.html"></iframe>
